<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.cambodia.od4d.wastewaterleakagetracker.activities.ReportScreen">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <ImageView
                    android:id="@+id/take_report"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/ic_camera_alt_black_24dp"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/condition"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/condition"/>
            <LinearLayout
                android:id="@+id/id_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:layout_margin="5dp"
                    android:background="@drawable/style_low"
                    android:layout_weight="1"
                    android:textColor="#48bc56"/>
                <Button
                    android:id="@+id/btn_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/medium"
                    android:background="@drawable/style_medium"
                    android:layout_weight="1"
                    android:textColor="#d68f38"/>
                <Button
                    android:id="@+id/btn_serious"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/serious"
                    android:background="@drawable/style_serious"
                    android:layout_weight="1"
                    android:textColor="#c14945"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/report_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/report"
                    android:lines="1">
                 </android.support.design.widget.TextInputEditText>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/desc_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/desc"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:id="@+id/progress_bar"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:max="100"
                        android:visibility="gone"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/text_percent"
                        android:visibility="visible"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Button
                        android:id="@+id/btn_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"
                        android:layout_margin="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/style_reset"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:layout_margin="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/style_reset"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</LinearLayout>


